[package]
name = "siteprobe"
version = "0.1.0"
license = "MIT"
edition = "2024"
authors = ["Martin Mahner <martin@elephant.house>"]
description = "Siteprobe is a Rust-based CLI tool that fetches all URLs from a given `sitemap.xml` url, checks their existence, and generates a performance report. It supports various features such as authentication, concurrency control, caching bypass, and more."
repository = "https://github.com/bartTC/siteprobe"
readme = "README.md"
categories = [
    "command-line-utilities",
    "web-programming",
    "network-programming",
    "parsing",
    "web-programming::http-client"
]
keywords = [
    "sitemap",
    "url-checker",
    "http-monitoring",
    "web-crawler",
    "performance",
]

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.31", features = ["derive", "wrap_help"] }
console = "0.15.11"
csv = "1.3.1"
futures = "0.3.31"
indicatif = "0.17.11"
once_cell = "1.20.3"
prettytable = "0.10.0"
quick-xml = "0.37.2"
rand = "0.9.0"
reqwest = { version = "0.12.12", features = ["json"] }
tokio = { version = "1.43.0", features = ["full"] }
unicode-segmentation = "1.12.0"
url = "2.5.4"

