[package]
name = "siteprobe"
version = "1.3.0"
license = "MIT"
edition = "2021"
authors = ["Martin Mahner <martin@elephant.house>"]
description = "CLI tool to fetch URLs from sitemap.xml, check their existence, and generate performance reports"
repository = "https://github.com/bartTC/siteprobe"
homepage = "https://barttc.github.io/siteprobe/"
readme = "README.md"
categories = [
    "command-line-utilities",
    "web-programming",
    "network-programming",
    "parsing",
    "web-programming::http-client"
]
keywords = [
    "sitemap",
    "url-checker",
    "http-monitoring",
    "web-crawler",
    "performance",
]


[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.31", features = ["derive", "wrap_help"] }
console = "0.15.11"
csv = "1.3.1"
flate2 = "1.1"
futures = "0.3.31"
indicatif = "0.17.11"
once_cell = "1.20.3"
prettytable = "0.10.0"
quick-xml = "0.37.2"
rand = "0.9.0"
reqwest = { version = "0.12.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1.43.0", features = ["full"] }
unicode-segmentation = "1.12.0"
url = "2.5.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
governor = "0.10.0"
shellexpand = "3.1"
toml = "0.8"

[dev-dependencies]
tempfile = "3.23.0"
wiremock = "0.6"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
